# browserAgent

./: pyproject.toml  run_agent.py
my_browser_use/agent/: __init__.py  service.py  views.py
my_browser_use/browser/: profile.py  session.py  views.py
my_browser_use/dom/: service.py  views.py
my_browser_use/llm/: base.py  messages.py  openai_chat.py
my_browser_use/tools/: service.py  views.py
notes/: day01.md  day02-CDP基础与BrowserSession.md  day02.md  day03-DOM提取与增强树.md  day04-Action系统与Tools注册表.md  day05-LLM抽象层.md
