# =============================================================================
# [project] — 项目基本信息
# =============================================================================
[project]
name = "browerAgent"
version = "0.1.0"
requires-python = ">=3.11,<4.0"        # 最低 Python 3.11，3.10 跑不了（语法不支持）

# ---------------------------------------------------------------------------
# dependencies — 运行时依赖，uv sync 会自动安装
# ---------------------------------------------------------------------------
dependencies = [
    "cdp-use>=1.4.5",          # CDP = Chrome DevTools Protocol，和 Chrome 通信的协议
    "bubus>=1.5.6",            # 事件总线（event bus），模块间解耦用
    "pydantic>=2.0",           # 数据类 + 自动校验，比 dataclass 强得多
    "httpx>=0.28",             # 异步 HTTP 客户端，类似 requests 但支持 async
    "python-dotenv>=1.2",      # 读取 .env 文件里的环境变量（API key 之类）
    "markdownify>=1.2",        # 把 HTML 转成 Markdown，给 LLM 看的
    "pillow>=12.0",            # 图片处理（截图、缩放等）
    "anyio>=4.12",             # 异步 I/O 抽象层，asyncio 的增强版
    "uuid7>=0.1.0",            # UUID v7（按时间排序的 UUID，比 v4 更适合做数据库主键）
    "rich>=14.0",              # 终端美化输出（彩色、表格、进度条）
    "field>=0.2.0",
    "logger>=1.4",
    "configdict>=2.14.2",
    "optional>=0.0.1",
]

# =============================================================================
# [tool.ruff] — 代码质量和格式化工具（Rust 写的，非常快）
# =============================================================================
[tool.ruff]
line-length = 130

[tool.ruff.lint]
select = ["E", "F", "I", "ASYNC"]
# E    = 风格错误（缩进、空格等）
# F    = 逻辑错误（未定义变量、未使用 import 等）
# I    = import 排序
# ASYNC = 异步代码最佳实践

[tool.ruff.format]
quote-style = "single"              # 单引号
indent-style = "tab"                # Tab 缩进

# =============================================================================
# [tool.pytest] — 测试框架配置
# =============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"               # 自动处理 async 测试函数
testpaths = ["tests"]               # 测试文件目录
